--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   </head>
   <body>
     <div class="page">
-      <img src="/images/logo.svg" alt="imagen del logo" class="logo" />
+      <img src="./images/logo.svg" alt="imagen del logo" class="logo" />
       <header class="lead">
         <h1 class="lead__title">De patria a patria</h1>
         <h3 class="lead__subtitle">
           Un viaje épico de Kentucky a Burundi pasando por Gales y Ucrania
         </h3>
         <img
-          src="/images/lead__image.jpg"
+          src="./images/lead__image.jpg"
           alt="imagen de un paisaje"
           class="lead__image"
         />
