--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
   <body>
     <div class="page">
       <img src="./images/logo.svg" alt="imagen del logo" class="logo" />
-      <header class="lead">
-        <h1 class="lead__title">De patria a patria</h1>
-        <h3 class="lead__subtitle">
+      <header class="header">
+        <h1 class="header__title">De patria a patria</h1>
+        <h3 class="header__subtitle">
           Un viaje épico de Kentucky a Burundi pasando por Gales y Ucrania
         </h3>
         <img
           src="./images/lead__image.jpg"
           alt="imagen de un paisaje"
-          class="lead__image"
+          class="header__image"
         />
       </header>
-      <main>
+      <main class="content">
         <section class="intro">
           <h4 class="intro__title">
             Conoce un poco mejor los lugares de los que proceden tus colegas en
