--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             pensamiento y las estructuras que conforman e influyen en nuestras
             vidas.
           </p>
-          <p class="intro__quote_author">— Joseph Beuys</p>
+          <p class="intro__quote-author">— Joseph Beuys</p>
           <p class="intro__text">
             La ciudad de TripleTen ha reunido a profesionales de diferentes
             rincones del mundo. Hoy, la Galería de Arte TripleTen se enorgullece
@@ -51,7 +51,7 @@
         </section>
       </main>
       <footer class="footer">
-        <p class="footer____copyright">&#169; 2024. Luis Gonzalez</p>
+        <p class="footer__copyright">&#169; 2024. Luis Gonzalez</p>
       </footer>
     </div>
   </body>
