--- a/index.html
+++ b/index.html
@@ -90,6 +90,141 @@
             class="gallery__item"
           />
         </section>
+        <section class="places">
+          <div class="place">
+            <h3 class="place__title-1">Cricieth,</h3>
+            <h3 class="place__title-2">Gales</h3>
+            <div class="place__artists">
+              <h4 class="place__subtitle">Artistas</h4>
+              <p class="artist__paragraph">Steffan Warren, editor jefe</p>
+              <p class="artist__paragraph">
+                Kseniya Glagoleva, gerente de proyectos
+              </p>
+            </div>
+            <img
+              src="./images/place__image-1.png"
+              alt="imagen Gales"
+              class="place__image"
+            />
+            <p class="place__paragraph-top">
+              Las ruinas medievales del castillo de Cricieth dominan la ciudad
+              desde una roca que extiende sobre el mar. Se cree que fue
+              construido por Llewelyn el Grande en el S. XIII. 800 años después,
+              la autodenominada *Perla de Gales en las costas de Snowdonia*, se
+              ha convertido en un popular destino turístico durante los meses de
+              verano.
+            </p>
+            <p class="place__paragraph-bottom">
+              A pocos pasos de camino al castillo, puedes disfrutar de los
+              mejores helados del mundo en Cadwalader's, cuyo ingrediente
+              secreto se rumorea que son algas marinas de la localidad. Otra
+              cosa por la que es famosa Cricieth es por haber ganado el premio
+              *Gales en flor* durante cinco años seguidos por sus espectaculares
+              muestras florales alrededor de la ciudad. También vio nacer a
+              David Lloyd George, el único galés que ha sido Primer Ministro del
+              Reino Unido.
+            </p>
+
+            <a
+              class="place__link"
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            >
+              <img
+                src="./images/buy-as-nft.png"
+                alt="imagen comprar como nft"
+              />
+            </a>
+          </div>
+
+          <div class="place">
+            <h3 class="place__title-1">Berea, EE.</h3>
+            <h3 class="place__title-2">UU.</h3>
+            <div class="place__artists">
+              <h4 class="place__subtitle">Artista</h4>
+              <p class="artist__paragraph">Travis Turner, autor y editor</p>
+            </div>
+            <img
+              src="./images/place__image-2.png"
+              alt="imagen UU"
+              class="place__image"
+            />
+            <p class="place__paragraph-top">
+              Berea es una pequeña ciudad ubicada en la parte central de
+              Kentucky. La ciudad está rodeada por hermosos bosques y campos. Es
+              conocida como la capital de la artesanía del estado, y sus
+              visitantes hallarán infinitas posibilidades para ir de compras:
+              tiendas de joyas, velas y artículos de madera artesanales;
+              galerías, talleres de vidrio y más. La ciudad celebra un festival
+              anual que rinde tributo al "spoonbread", un platillo local hecho
+              de pan de maíz y que se sirve con una cuchara de madera.
+            </p>
+            <p class="place__paragraph-bottom">
+              Aunque, probablemente es mejor conocida por su universidad. El
+              Berea College fue fundado en 1855 y fue la primera universidad
+              sureña integrada racialmente, así como la primera en ser
+              coeducacional. Algo que en cierta manera la hace única, es que no
+              cobra colegiatura: cada estudiante recibe una beca del 100%.
+            </p>
+
+            <a
+              class="place__link"
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            >
+              <img
+                src="./images/buy-as-nft.png"
+                alt="imagen comprar como nft"
+              />
+            </a>
+          </div>
+
+          <div class="place">
+            <h3 class="place__title-1">Muramvya,</h3>
+            <h3 class="place__title-2">Burundi</h3>
+            <div class="place__artists">
+              <h4 class="place__subtitle">Artista</h4>
+              <p class="artist__paragraph">
+                Grevisse Kenguruka, editor técnico
+              </p>
+            </div>
+            <img
+              src="./images/place__image-3.png"
+              alt="imagen Burundi"
+              class="place__image"
+            />
+            <p class="place__paragraph-top">
+              Muramvya es una de las 18 provincias de Burundi. Durante la época
+              del reino, Muramvya fue su capital; y en 2017, gracias a su
+              paisaje cultural y natural, se añadió a la Lista provisional de
+              patrimonio mundial de la UNESCO. Se encuentra ubicada en el centro
+              de Burundi, entre las capitales política y económica del país.
+            </p>
+            <p class="place__paragraph-bottom">
+              Muramvya es una de las 18 provincias de Burundi. Durante la época
+              del reino, Muramvya fue su capital; y en 2017, gracias a su
+              paisaje cultural y natural, se añadió a la Lista provisional de
+              patrimonio mundial de la UNESCO. Se encuentra ubicada en el centro
+              de Burundi, entre las capitales política y económica del país.
+            </p>
+            <p class="place__paragraph-3">
+              El Parque nacional de Kibira, una de las mayores reservas de vida
+              silvestre para los simios, ocupa parte de cuatro provincias,
+              incluyendo Muramvya. Este parque nacional se encuentra en las
+              cúspides de las hermosas montañas de la Divisoria Congo-Nilo,
+              cuyas alturas oscilan entre 1,550 y 2,660 metros. Está lleno de
+              hermosa vegetación, y es una fuente para los diversos ríos y
+              arroyos que proporcionan agua alrededor del país.
+            </p>
+            <a
+              class="place__link"
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            >
+              <img
+                src="./images/buy-as-nft.png"
+                alt="imagen comprar como nft"
+              />
+            </a>
+          </div>
+        </section>
       </main>
       <footer class="footer">
         <p class="footer__copyright">&#169; 2024. Luis Gonzalez</p>
