--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
         </section>
         <section class="places">
           <div class="place">
-            <h3 class="place__title-1">Cricieth,</h3>
-            <h3 class="place__title-2">Gales</h3>
+            <h3 class="place__title-top">Cricieth,</h3>
+            <h3 class="place__title-bottom">Gales</h3>
             <div class="place__artists">
               <h4 class="place__subtitle">Artistas</h4>
-              <p class="artist__paragraph">Steffan Warren, editor jefe</p>
-              <p class="artist__paragraph">
+              <p class="place__artist_paragraph">Steffan Warren, editor jefe</p>
+              <p class="place__artist_paragraph">
                 Kseniya Glagoleva, gerente de proyectos
               </p>
             </div>
@@ -114,7 +114,7 @@
               ha convertido en un popular destino turístico durante los meses de
               verano.
             </p>
-            <p class="place__paragraph-bottom">
+            <p class="place__paragraph-mid">
               A pocos pasos de camino al castillo, puedes disfrutar de los
               mejores helados del mundo en Cadwalader's, cuyo ingrediente
               secreto se rumorea que son algas marinas de la localidad. Otra
@@ -131,17 +131,20 @@
             >
               <img
                 src="./images/buy-as-nft.png"
-                alt="imagen comprar como nft"
+                alt="icono comprar como nft"
+                class="place__link-image"
               />
             </a>
           </div>
 
           <div class="place">
-            <h3 class="place__title-1">Berea, EE.</h3>
-            <h3 class="place__title-2">UU.</h3>
+            <h3 class="place__title-top">Berea, EE.</h3>
+            <h3 class="place__title-bottom">UU.</h3>
             <div class="place__artists">
               <h4 class="place__subtitle">Artista</h4>
-              <p class="artist__paragraph">Travis Turner, autor y editor</p>
+              <p class="place__artist_paragraph">
+                Travis Turner, autor y editor
+              </p>
             </div>
             <img
               src="./images/place__image-2.png"
@@ -158,7 +161,7 @@
               anual que rinde tributo al "spoonbread", un platillo local hecho
               de pan de maíz y que se sirve con una cuchara de madera.
             </p>
-            <p class="place__paragraph-bottom">
+            <p class="place__paragraph-mid">
               Aunque, probablemente es mejor conocida por su universidad. El
               Berea College fue fundado en 1855 y fue la primera universidad
               sureña integrada racialmente, así como la primera en ser
@@ -172,17 +175,18 @@
             >
               <img
                 src="./images/buy-as-nft.png"
-                alt="imagen comprar como nft"
+                alt="icono comprar como nft"
+                class="place__link-image"
               />
             </a>
           </div>
 
           <div class="place">
-            <h3 class="place__title-1">Muramvya,</h3>
-            <h3 class="place__title-2">Burundi</h3>
+            <h3 class="place__title-top">Muramvya,</h3>
+            <h3 class="place__title-bottom">Burundi</h3>
             <div class="place__artists">
               <h4 class="place__subtitle">Artista</h4>
-              <p class="artist__paragraph">
+              <p class="place__artist_paragraph">
                 Grevisse Kenguruka, editor técnico
               </p>
             </div>
@@ -198,14 +202,14 @@
               patrimonio mundial de la UNESCO. Se encuentra ubicada en el centro
               de Burundi, entre las capitales política y económica del país.
             </p>
-            <p class="place__paragraph-bottom">
+            <p class="place__paragraph-mid">
               Muramvya es una de las 18 provincias de Burundi. Durante la época
               del reino, Muramvya fue su capital; y en 2017, gracias a su
               paisaje cultural y natural, se añadió a la Lista provisional de
               patrimonio mundial de la UNESCO. Se encuentra ubicada en el centro
               de Burundi, entre las capitales política y económica del país.
             </p>
-            <p class="place__paragraph-3">
+            <p class="place__paragraph-bottom">
               El Parque nacional de Kibira, una de las mayores reservas de vida
               silvestre para los simios, ocupa parte de cuatro provincias,
               incluyendo Muramvya. Este parque nacional se encuentra en las
@@ -220,7 +224,96 @@
             >
               <img
                 src="./images/buy-as-nft.png"
-                alt="imagen comprar como nft"
+                alt="icono comprar como nft"
+                class="place__link-image"
+              />
+            </a>
+          </div>
+
+          <div class="place">
+            <h3 class="place__title-top">Cricieth,</h3>
+            <h3 class="place__title-bottom">Gales</h3>
+            <div class="place__artists">
+              <h4 class="place__subtitle">Artistas</h4>
+              <p class="place__artist_paragraph">Steffan Warren, editor jefe</p>
+              <p class="place__artist_paragraph">
+                Kseniya Glagoleva, gerente de proyectos
+              </p>
+            </div>
+            <img
+              src="./images/place__image-1.png"
+              alt="imagen Gales"
+              class="place__image"
+            />
+            <p class="place__paragraph-top">
+              Las ruinas medievales del castillo de Cricieth dominan la ciudad
+              desde una roca que extiende sobre el mar. Se cree que fue
+              construido por Llewelyn el Grande en el S. XIII. 800 años después,
+              la autodenominada *Perla de Gales en las costas de Snowdonia*, se
+              ha convertido en un popular destino turístico durante los meses de
+              verano.
+            </p>
+            <p class="place__paragraph-mid">
+              A pocos pasos de camino al castillo, puedes disfrutar de los
+              mejores helados del mundo en Cadwalader's, cuyo ingrediente
+              secreto se rumorea que son algas marinas de la localidad. Otra
+              cosa por la que es famosa Cricieth es por haber ganado el premio
+              *Gales en flor* durante cinco años seguidos por sus espectaculares
+              muestras florales alrededor de la ciudad. También vio nacer a
+              David Lloyd George, el único galés que ha sido Primer Ministro del
+              Reino Unido.
+            </p>
+
+            <a
+              class="place__link"
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            >
+              <img
+                src="./images/buy-as-nft.png"
+                alt="icono comprar como nft"
+                class="place__link-image"
+              />
+            </a>
+          </div>
+
+          <div class="place">
+            <h3 class="place__title-top">CDMX,</h3>
+            <h3 class="place__title-bottom">México.</h3>
+            <div class="place__artists">
+              <h4 class="place__subtitle">Artista</h4>
+              <p class="place__artist_paragraph">
+                Luis Gonzalez , diseñador web.
+              </p>
+            </div>
+            <img
+              src="./images/place__image-4.jpg"
+              alt="imagen CDMX"
+              class="place__image"
+            />
+            <p class="place__paragraph-top">
+              Ciudad de México es la densamente poblada capital de México que se
+              encuentra a gran altura. Es famosa por su Templo Mayor (un templo
+              azteca del siglo XIII), la Catedral Metropolitana de México, de
+              estilo barroco, de los conquistadores españoles y el Palacio
+              Nacional, que alberga murales históricos de Diego Rivera. Todos
+              estos hitos se ubican en torno a la Plaza de la Constitución, la
+              enorme plaza principal conocida también como el Zócalo.
+            </p>
+            <p class="place__paragraph-mid">
+              Ha sido el escenario de varios de los acontecimientos históricos y
+              mediáticos más importantes de dicha nación. No hay consenso
+              científico sobre la fecha de la fundación de la ciudad, pero pudo
+              ocurrir a inicios del siglo xiv.
+            </p>
+
+            <a
+              class="place__link"
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            >
+              <img
+                src="./images/buy-as-nft.png"
+                alt="icono comprar como nft"
+                class="place__link-image"
               />
             </a>
           </div>
