--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
         </section>
         <section class="places">
           <div class="place">
-            <h3 class="place__title-top">Cricieth,</h3>
-            <h3 class="place__title-bottom">Gales</h3>
+            <h3 class="place__title">Cricieth, Gales</h3>
             <div class="place__artists">
               <h4 class="place__subtitle">Artistas</h4>
               <p class="place__artist_paragraph">Steffan Warren, editor jefe</p>
@@ -124,7 +123,6 @@
               David Lloyd George, el único galés que ha sido Primer Ministro del
               Reino Unido.
             </p>
-
             <a
               class="place__link"
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
@@ -138,8 +136,7 @@
           </div>
 
           <div class="place">
-            <h3 class="place__title-top">Berea, EE.</h3>
-            <h3 class="place__title-bottom">UU.</h3>
+            <h3 class="place__title">Berea, EE.UU.</h3>
             <div class="place__artists">
               <h4 class="place__subtitle">Artista</h4>
               <p class="place__artist_paragraph">
@@ -168,7 +165,6 @@
               coeducacional. Algo que en cierta manera la hace única, es que no
               cobra colegiatura: cada estudiante recibe una beca del 100%.
             </p>
-
             <a
               class="place__link"
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
@@ -182,8 +178,7 @@
           </div>
 
           <div class="place">
-            <h3 class="place__title-top">Muramvya,</h3>
-            <h3 class="place__title-bottom">Burundi</h3>
+            <h3 class="place__title">Muramvya,<br />Burundi</h3>
             <div class="place__artists">
               <h4 class="place__subtitle">Artista</h4>
               <p class="place__artist_paragraph">
@@ -231,58 +226,11 @@
           </div>
 
           <div class="place">
-            <h3 class="place__title-top">Cricieth,</h3>
-            <h3 class="place__title-bottom">Gales</h3>
-            <div class="place__artists">
-              <h4 class="place__subtitle">Artistas</h4>
-              <p class="place__artist_paragraph">Steffan Warren, editor jefe</p>
-              <p class="place__artist_paragraph">
-                Kseniya Glagoleva, gerente de proyectos
-              </p>
-            </div>
-            <img
-              src="./images/place__image-1.png"
-              alt="imagen Gales"
-              class="place__image"
-            />
-            <p class="place__paragraph-top">
-              Las ruinas medievales del castillo de Cricieth dominan la ciudad
-              desde una roca que extiende sobre el mar. Se cree que fue
-              construido por Llewelyn el Grande en el S. XIII. 800 años después,
-              la autodenominada *Perla de Gales en las costas de Snowdonia*, se
-              ha convertido en un popular destino turístico durante los meses de
-              verano.
-            </p>
-            <p class="place__paragraph-mid">
-              A pocos pasos de camino al castillo, puedes disfrutar de los
-              mejores helados del mundo en Cadwalader's, cuyo ingrediente
-              secreto se rumorea que son algas marinas de la localidad. Otra
-              cosa por la que es famosa Cricieth es por haber ganado el premio
-              *Gales en flor* durante cinco años seguidos por sus espectaculares
-              muestras florales alrededor de la ciudad. También vio nacer a
-              David Lloyd George, el único galés que ha sido Primer Ministro del
-              Reino Unido.
-            </p>
-
-            <a
-              class="place__link"
-              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
-            >
-              <img
-                src="./images/buy-as-nft.png"
-                alt="icono comprar como nft"
-                class="place__link-image"
-              />
-            </a>
-          </div>
-
-          <div class="place">
-            <h3 class="place__title-top">CDMX,</h3>
-            <h3 class="place__title-bottom">México.</h3>
+            <h3 class="place__title">CDMX, México.</h3>
             <div class="place__artists">
               <h4 class="place__subtitle">Artista</h4>
               <p class="place__artist_paragraph">
-                Luis Gonzalez , diseñador web.
+                Luis González , diseñador web.
               </p>
             </div>
             <img
@@ -305,7 +253,6 @@
               científico sobre la fecha de la fundación de la ciudad, pero pudo
               ocurrir a inicios del siglo xiv.
             </p>
-
             <a
               class="place__link"
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
