--- a/index.html
+++ b/index.html
@@ -127,11 +127,9 @@
               class="place__link"
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
             >
-              <img
-                src="./images/buy-as-nft.png"
-                alt="icono comprar como nft"
-                class="place__link-image"
-              />
+              <div class="place__link-icon">
+                <p class="place__link-paragraph">Compra esta obra como NFT</p>
+              </div>
             </a>
           </div>
 
@@ -169,11 +167,9 @@
               class="place__link"
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
             >
-              <img
-                src="./images/buy-as-nft.png"
-                alt="icono comprar como nft"
-                class="place__link-image"
-              />
+              <div class="place__link-icon">
+                <p class="place__link-paragraph">Compra esta obra como NFT</p>
+              </div>
             </a>
           </div>
 
@@ -217,11 +213,9 @@
               class="place__link"
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
             >
-              <img
-                src="./images/buy-as-nft.png"
-                alt="icono comprar como nft"
-                class="place__link-image"
-              />
+              <div class="place__link-icon">
+                <p class="place__link-paragraph">Compra esta obra como NFT</p>
+              </div>
             </a>
           </div>
 
@@ -257,11 +251,9 @@
               class="place__link"
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
             >
-              <img
-                src="./images/buy-as-nft.png"
-                alt="icono comprar como nft"
-                class="place__link-image"
-              />
+              <div class="place__link-icon">
+                <p class="place__link-paragraph">Compra esta obra como NFT</p>
+              </div>
             </a>
           </div>
         </section>
