--- a/index.html
+++ b/index.html
@@ -100,11 +100,16 @@
                 Kseniya Glagoleva, gerente de proyectos
               </p>
             </div>
-            <img
-              src="./images/place__image-1.png"
-              alt="imagen Gales"
-              class="place__image"
-            />
+            <a
+              class="place__link-image"
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            >
+              <img
+                src="./images/place__image-1.png"
+                alt="imagen Gales"
+                class="place__image"
+              />
+            </a>
             <p class="place__paragraph-top">
               Las ruinas medievales del castillo de Cricieth dominan la ciudad
               desde una roca que extiende sobre el mar. Se cree que fue
@@ -124,7 +129,7 @@
               Reino Unido.
             </p>
             <a
-              class="place__link"
+              class="place__link-buton"
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
             >
               <div class="place__link-icon">
@@ -141,11 +146,16 @@
                 Travis Turner, autor y editor
               </p>
             </div>
-            <img
-              src="./images/place__image-2.png"
-              alt="imagen UU"
-              class="place__image"
-            />
+            <a
+              class="place__link-image"
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            >
+              <img
+                src="./images/place__image-2.png"
+                alt="imagen UU"
+                class="place__image"
+              />
+            </a>
             <p class="place__paragraph-top">
               Berea es una pequeña ciudad ubicada en la parte central de
               Kentucky. La ciudad está rodeada por hermosos bosques y campos. Es
@@ -164,7 +174,7 @@
               cobra colegiatura: cada estudiante recibe una beca del 100%.
             </p>
             <a
-              class="place__link"
+              class="place__link-buton"
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
             >
               <div class="place__link-icon">
@@ -181,11 +191,16 @@
                 Grevisse Kenguruka, editor técnico
               </p>
             </div>
-            <img
-              src="./images/place__image-3.png"
-              alt="imagen Burundi"
-              class="place__image"
-            />
+            <a
+              class="place__link-image"
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            >
+              <img
+                src="./images/place__image-3.png"
+                alt="imagen Burundi"
+                class="place__image"
+              />
+            </a>
             <p class="place__paragraph-top">
               Muramvya es una de las 18 provincias de Burundi. Durante la época
               del reino, Muramvya fue su capital; y en 2017, gracias a su
@@ -210,7 +225,7 @@
               arroyos que proporcionan agua alrededor del país.
             </p>
             <a
-              class="place__link"
+              class="place__link-buton"
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
             >
               <div class="place__link-icon">
@@ -227,11 +242,16 @@
                 Luis González , diseñador web.
               </p>
             </div>
-            <img
-              src="./images/place__image-4.jpg"
-              alt="imagen CDMX"
-              class="place__image"
-            />
+            <a
+              class="place__link-image"
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            >
+              <img
+                src="./images/place__image-4.jpg"
+                alt="imagen CDMX"
+                class="place__image"
+              />
+            </a>
             <p class="place__paragraph-top">
               Ciudad de México es la densamente poblada capital de México que se
               encuentra a gran altura. Es famosa por su Templo Mayor (un templo
@@ -248,7 +268,7 @@
               ocurrir a inicios del siglo xiv.
             </p>
             <a
-              class="place__link"
+              class="place__link-buton"
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
             >
               <div class="place__link-icon">
