--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
             <h3 class="place__title">Cricieth, Gales</h3>
             <div class="place__artists">
               <h4 class="place__subtitle">Artistas</h4>
-              <p class="place__artist_paragraph">Steffan Warren, editor jefe</p>
-              <p class="place__artist_paragraph">
+              <p class="place__artist-paragraph">Steffan Warren, editor jefe</p>
+              <p class="place__artist-paragraph">
                 Kseniya Glagoleva, gerente de proyectos
               </p>
             </div>
@@ -142,7 +142,7 @@
             <h3 class="place__title">Berea, EE.UU.</h3>
             <div class="place__artists">
               <h4 class="place__subtitle">Artista</h4>
-              <p class="place__artist_paragraph">
+              <p class="place__artist-paragraph">
                 Travis Turner, autor y editor
               </p>
             </div>
@@ -184,10 +184,10 @@
           </div>
 
           <div class="place">
-            <h3 class="place__title">Muramvya,<br />Burundi</h3>
+            <h3 class="place__title">Muramvya, Burundi</h3>
             <div class="place__artists">
               <h4 class="place__subtitle">Artista</h4>
-              <p class="place__artist_paragraph">
+              <p class="place__artist-paragraph">
                 Grevisse Kenguruka, editor técnico
               </p>
             </div>
@@ -238,7 +238,7 @@
             <h3 class="place__title">CDMX, México.</h3>
             <div class="place__artists">
               <h4 class="place__subtitle">Artista</h4>
-              <p class="place__artist_paragraph">
+              <p class="place__artist-paragraph">
                 Luis González , diseñador web.
               </p>
             </div>
