--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
               Reino Unido.
             </p>
             <a
-              class="place__link-buton"
+              class="place__link"
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
             >
-              <div class="place__link-icon">
+              <button class="place__link-button" type="button">
                 <p class="place__link-paragraph">Compra esta obra como NFT</p>
-              </div>
+              </button>
             </a>
           </div>
 
@@ -174,17 +174,18 @@
               cobra colegiatura: cada estudiante recibe una beca del 100%.
             </p>
             <a
-              class="place__link-buton"
+              class="place__link"
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
             >
-              <div class="place__link-icon">
+              <button class="place__link-button" type="button">
                 <p class="place__link-paragraph">Compra esta obra como NFT</p>
-              </div>
+              </button>
             </a>
           </div>
 
           <div class="place">
-            <h3 class="place__title">Muramvya, Burundi</h3>
+            <h3 class="place__title">Muramvya, <br />Burundi</h3>
+            <!-- quitar br -->
             <div class="place__artists">
               <h4 class="place__subtitle">Artista</h4>
               <p class="place__artist-paragraph">
@@ -225,12 +226,12 @@
               arroyos que proporcionan agua alrededor del país.
             </p>
             <a
-              class="place__link-buton"
+              class="place__link"
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
             >
-              <div class="place__link-icon">
+              <button class="place__link-button" type="button">
                 <p class="place__link-paragraph">Compra esta obra como NFT</p>
-              </div>
+              </button>
             </a>
           </div>
 
@@ -268,12 +269,12 @@
               ocurrir a inicios del siglo xiv.
             </p>
             <a
-              class="place__link-buton"
+              class="place__link"
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
             >
-              <div class="place__link-icon">
+              <button class="place__link-button" type="button">
                 <p class="place__link-paragraph">Compra esta obra como NFT</p>
-              </div>
+              </button>
             </a>
           </div>
         </section>
