--- a/index.html
+++ b/index.html
@@ -110,24 +110,26 @@
                 class="place__image"
               />
             </a>
-            <p class="place__paragraph-top">
-              Las ruinas medievales del castillo de Cricieth dominan la ciudad
-              desde una roca que extiende sobre el mar. Se cree que fue
-              construido por Llewelyn el Grande en el S. XIII. 800 años después,
-              la autodenominada *Perla de Gales en las costas de Snowdonia*, se
-              ha convertido en un popular destino turístico durante los meses de
-              verano.
-            </p>
-            <p class="place__paragraph-mid">
-              A pocos pasos de camino al castillo, puedes disfrutar de los
-              mejores helados del mundo en Cadwalader's, cuyo ingrediente
-              secreto se rumorea que son algas marinas de la localidad. Otra
-              cosa por la que es famosa Cricieth es por haber ganado el premio
-              *Gales en flor* durante cinco años seguidos por sus espectaculares
-              muestras florales alrededor de la ciudad. También vio nacer a
-              David Lloyd George, el único galés que ha sido Primer Ministro del
-              Reino Unido.
-            </p>
+            <div class="place__paragraphs">
+              <p class="place__paragraph">
+                Las ruinas medievales del castillo de Cricieth dominan la ciudad
+                desde una roca que extiende sobre el mar. Se cree que fue
+                construido por Llewelyn el Grande en el S. XIII. 800 años
+                después, la autodenominada *Perla de Gales en las costas de
+                Snowdonia*, se ha convertido en un popular destino turístico
+                durante los meses de verano.
+              </p>
+              <p class="place__paragraph">
+                A pocos pasos de camino al castillo, puedes disfrutar de los
+                mejores helados del mundo en Cadwalader's, cuyo ingrediente
+                secreto se rumorea que son algas marinas de la localidad. Otra
+                cosa por la que es famosa Cricieth es por haber ganado el premio
+                *Gales en flor* durante cinco años seguidos por sus
+                espectaculares muestras florales alrededor de la ciudad. También
+                vio nacer a David Lloyd George, el único galés que ha sido
+                Primer Ministro del Reino Unido.
+              </p>
+            </div>
             <a
               class="place__link"
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
@@ -156,23 +158,26 @@
                 class="place__image"
               />
             </a>
-            <p class="place__paragraph-top">
-              Berea es una pequeña ciudad ubicada en la parte central de
-              Kentucky. La ciudad está rodeada por hermosos bosques y campos. Es
-              conocida como la capital de la artesanía del estado, y sus
-              visitantes hallarán infinitas posibilidades para ir de compras:
-              tiendas de joyas, velas y artículos de madera artesanales;
-              galerías, talleres de vidrio y más. La ciudad celebra un festival
-              anual que rinde tributo al "spoonbread", un platillo local hecho
-              de pan de maíz y que se sirve con una cuchara de madera.
-            </p>
-            <p class="place__paragraph-mid">
-              Aunque, probablemente es mejor conocida por su universidad. El
-              Berea College fue fundado en 1855 y fue la primera universidad
-              sureña integrada racialmente, así como la primera en ser
-              coeducacional. Algo que en cierta manera la hace única, es que no
-              cobra colegiatura: cada estudiante recibe una beca del 100%.
-            </p>
+            <div class="place__paragraphs">
+              <p class="place__paragraph">
+                Berea es una pequeña ciudad ubicada en la parte central de
+                Kentucky. La ciudad está rodeada por hermosos bosques y campos.
+                Es conocida como la capital de la artesanía del estado, y sus
+                visitantes hallarán infinitas posibilidades para ir de compras:
+                tiendas de joyas, velas y artículos de madera artesanales;
+                galerías, talleres de vidrio y más. La ciudad celebra un
+                festival anual que rinde tributo al "spoonbread", un platillo
+                local hecho de pan de maíz y que se sirve con una cuchara de
+                madera.
+              </p>
+              <p class="place__paragraph">
+                Aunque, probablemente es mejor conocida por su universidad. El
+                Berea College fue fundado en 1855 y fue la primera universidad
+                sureña integrada racialmente, así como la primera en ser
+                coeducacional. Algo que en cierta manera la hace única, es que
+                no cobra colegiatura: cada estudiante recibe una beca del 100%.
+              </p>
+            </div>
             <a
               class="place__link"
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
@@ -202,29 +207,34 @@
                 class="place__image"
               />
             </a>
-            <p class="place__paragraph-top">
-              Muramvya es una de las 18 provincias de Burundi. Durante la época
-              del reino, Muramvya fue su capital; y en 2017, gracias a su
-              paisaje cultural y natural, se añadió a la Lista provisional de
-              patrimonio mundial de la UNESCO. Se encuentra ubicada en el centro
-              de Burundi, entre las capitales política y económica del país.
-            </p>
-            <p class="place__paragraph-mid">
-              Muramvya es una de las 18 provincias de Burundi. Durante la época
-              del reino, Muramvya fue su capital; y en 2017, gracias a su
-              paisaje cultural y natural, se añadió a la Lista provisional de
-              patrimonio mundial de la UNESCO. Se encuentra ubicada en el centro
-              de Burundi, entre las capitales política y económica del país.
-            </p>
-            <p class="place__paragraph-bottom">
-              El Parque nacional de Kibira, una de las mayores reservas de vida
-              silvestre para los simios, ocupa parte de cuatro provincias,
-              incluyendo Muramvya. Este parque nacional se encuentra en las
-              cúspides de las hermosas montañas de la Divisoria Congo-Nilo,
-              cuyas alturas oscilan entre 1,550 y 2,660 metros. Está lleno de
-              hermosa vegetación, y es una fuente para los diversos ríos y
-              arroyos que proporcionan agua alrededor del país.
-            </p>
+            <div class="place__paragraphs">
+              <p class="place__paragraph">
+                Muramvya es una de las 18 provincias de Burundi. Durante la
+                época del reino, Muramvya fue su capital; y en 2017, gracias a
+                su paisaje cultural y natural, se añadió a la Lista provisional
+                de patrimonio mundial de la UNESCO. Se encuentra ubicada en el
+                centro de Burundi, entre las capitales política y económica del
+                país.
+              </p>
+              <p class="place__paragraph">
+                Muramvya es una de las 18 provincias de Burundi. Durante la
+                época del reino, Muramvya fue su capital; y en 2017, gracias a
+                su paisaje cultural y natural, se añadió a la Lista provisional
+                de patrimonio mundial de la UNESCO. Se encuentra ubicada en el
+                centro de Burundi, entre las capitales política y económica del
+                país.
+              </p>
+              <p class="place__paragraph">
+                El Parque nacional de Kibira, una de las mayores reservas de
+                vida silvestre para los simios, ocupa parte de cuatro
+                provincias, incluyendo Muramvya. Este parque nacional se
+                encuentra en las cúspides de las hermosas montañas de la
+                Divisoria Congo-Nilo, cuyas alturas oscilan entre 1,550 y 2,660
+                metros. Está lleno de hermosa vegetación, y es una fuente para
+                los diversos ríos y arroyos que proporcionan agua alrededor del
+                país.
+              </p>
+            </div>
             <a
               class="place__link"
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
@@ -253,21 +263,24 @@
                 class="place__image"
               />
             </a>
-            <p class="place__paragraph-top">
-              Ciudad de México es la densamente poblada capital de México que se
-              encuentra a gran altura. Es famosa por su Templo Mayor (un templo
-              azteca del siglo XIII), la Catedral Metropolitana de México, de
-              estilo barroco, de los conquistadores españoles y el Palacio
-              Nacional, que alberga murales históricos de Diego Rivera. Todos
-              estos hitos se ubican en torno a la Plaza de la Constitución, la
-              enorme plaza principal conocida también como el Zócalo.
-            </p>
-            <p class="place__paragraph-mid">
-              Ha sido el escenario de varios de los acontecimientos históricos y
-              mediáticos más importantes de dicha nación. No hay consenso
-              científico sobre la fecha de la fundación de la ciudad, pero pudo
-              ocurrir a inicios del siglo xiv.
-            </p>
+            <div class="place__paragraphs">
+              <p class="place__paragraph">
+                Ciudad de México es la densamente poblada capital de México que
+                se encuentra a gran altura. Es famosa por su Templo Mayor (un
+                templo azteca del siglo XIII), la Catedral Metropolitana de
+                México, de estilo barroco, de los conquistadores españoles y el
+                Palacio Nacional, que alberga murales históricos de Diego
+                Rivera. Todos estos hitos se ubican en torno a la Plaza de la
+                Constitución, la enorme plaza principal conocida también como el
+                Zócalo.
+              </p>
+              <p class="place__paragraph">
+                Ha sido el escenario de varios de los acontecimientos históricos
+                y mediáticos más importantes de dicha nación. No hay consenso
+                científico sobre la fecha de la fundación de la ciudad, pero
+                pudo ocurrir a inicios del siglo xiv.
+              </p>
+            </div>
             <a
               class="place__link"
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
