--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
         </section>
       </main>
       <footer class="footer">
-        <p class="footer__copyright">&#169; 2024. Luis Gonzalez</p>
+        <p class="footer__copyright">&#169; 2024. Luis González</p>
       </footer>
     </div>
   </body>
